# am

./: .gitignore  README  am.postman_collection.json  assignment-2-final.html  assignment-2.Rmd  assignment-3.7z  docker-compose.yml  ml-phase-1.ipynb  ml-project.py  notes  project.7z  rental.7z  src.7z
bookings/: .eslintrc  Dockerfile  application.js  docker-compose.yml  package-lock.json  package.json
bookings/api/: swagger.yaml
bookings/clients/: event.js
bookings/controllers/: service.js  setup.js
bookings/core/: bootstrap.js
bookings/db/: index.js
bookings/models/: booking.js
bookings/test/: index.js
campaigns/: Dockerfile  application.js  docker-compose.yml  package-lock.json  package.json
campaigns/api/: swagger.json  swagger.yaml
campaigns/controllers/: service.js  setup.js
campaigns/db/: index.js
campaigns/models/: campaign.js
campaigns/test/: index.js
dynamodb/: Dockerfile  nginx-proxy.conf  supervisord.conf
events/: Dockerfile  application.js  docker-compose.yml  package-lock.json  package.json
events/api/: swagger.json  swagger.yaml
events/clients/: token.js
events/controllers/: service.js  (+1 more)
ldap/: Dockerfile  Dockerfile.phpLdapAdmin  docker-compose.yml  restore-backup.sh  restore.sh  server.crt  server.key
offers/: Dockerfile  application.js  docker-compose.yml  package-lock.json  package.json
pistache-docker/: Dockerfile
rules/: pom.xml
token/: CMakeLists.txt  Dockerfile  docker-compose.yml  server.csr
token/include/: auth.h  ldapio.h  user.h
token/src/: CMakeLists.txt  auth.cc  ldapio.cc  server.cc  user.cc
(+38 files in other folders)
